--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.24.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "node-fetch": "^3.1.0",
-    "redis": "^4.0.1"
+    "node-fetch": "^3.1.0"
   }
 }
